# ComfyUI-WanLooper

./: .comfyignore  .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  nodes.py  nodes_highlow.py  nodes_looper_v2.py  nodes_wan.py  nodes_wan_v2.py  pyproject.toml
docs/: SVI_Looper_Native_Reference.md
docs/briefs/: 2026-04-17_Codex_Takeover_Progress_Report.md  2026-04-18_CC_Architecture_Audit_Brief.md  2026-04-18_Native_Resolution_Comparison.md  2026-04-18_Session_Findings_Claude_Chat.md  2026-04-18_audit_complete.md  CC_Phase1_Prompt.md  CC_Phase2_Prompt.md  SVILooper_CC_Brief.md  SVILooper_OptionA_Brief.md  SVILooper_Project_Brief.md
docs/superpowers/plans/: 2026-04-11-hybrid-architecture-rebuild.md
workflows/: ComfyUI-WanLooper_example_workflow.json  ComfyUI-WanLooper_example_workflow_advanced.json  SVI_Looper_v2_v1.0.json  svi_looper_KSA_test_v1.0.json  svi_looper_KSA_test_v1.1 (1).json  svi_looper_KSA_test_v1.1.json  svi_looper_kj_native_test-v1.0.json  svi_looper_test_v1.json  svi_looper_test_v1a.json  svi_looper_test_v2.1.json  svi_looper_test_v2.3.json  svi_looper_test_v2.4.json  svi_looper_test_v2.4a.json  svi_looper_test_v2.5.json  svi_looper_test_v2.json
workflows/original/: I2V Looper HL Detailed.json  I2V Looper HL Preview.json
